# Capstone_GOPHR_ROS

./: README.md
obstacle_detection/: CMakeLists.txt  package.xml
obstacle_detection/launch/: obstacle_lidar.launch
obstacle_detection/src/: obstacle_read.py
rplidar_ros/src/: node.cpp
user_interface/: CMakeLists.txt  package.xml
user_interface/saved_waypoints/: waypointNodes1 (copy).csv  waypoints1.csv  waypoints15.csv  waypoints2.csv  waypoints3.csv  waypointsCob.csv  waypointsSimple.csv
user_interface/src/: GOPHREyes.ui  MakeDelivery.ui  Popup.ui  RetrieveItem.ui  ScanBadge (copy).ui  ScanBadge.ui  TravelingToDestination.ui  images.py  images.qrc  main.py
user_interface/src/data/: nurse_data.txt  patient_data.txt
