<?xml version="1.0"?>
<package format="2">
  <name>user_interface</name>
  <version>0.1.0</version>
  <description>The user_interface package</description>

  <maintainer email="tjccmobilerobotics@gmail.com">tjcc</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/obstacle_detection</url> -->

  <author email="chrisaortiz98@gmail.com">Christopher Ortiz</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>PyQt5</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
